# lab2_factories

./: .env.example  .gitignore  ADVANCED_PROGRESS_REPORT.md  AIRFLOW_ACCESS_SOLVED.html  AIRFLOW_RUNNING.md  API_DOCUMENTATION.md  COMPLETE_SYSTEM_SUMMARY.md  COMPOSABILITY_ARCHITECTURE.md  CONNECTION_SOLUTIONS.md  CRITICAL_EVALUATION.md  CSRF_SOLUTION_IMMEDIATE.md  DEEP_PIPELINE_ANALYSIS.md  DESIGN_PATTERNS_GUIDE.md  DETAILED_SYSTEM_EXPLANATION.md  DOCUMENT_GRAPH_RESEARCH.md  Dockerfile.airflow  FINAL_HOMEWORK_SUBMISSION.md  FINAL_REPORT.md  FINAL_STATUS.md  FINAL_SUBMISSION_PACKAGE.md  FINAL_SUMMARY.md  HOMEWORK_BRANCH_README.md  HOMEWORK_README.md  HOMEWORK_SUBMISSION.md  HOMEWORK_SUBMISSION_REPORT.md  HOMEWORK_VERIFICATION.md  HOMEWORK_VISUAL_DEMONSTRATION.html  LOGIN_CREDENTIALS_FIXED.md  MASTER_README.md  MLOPS_HOMEWORK1_SUBMISSION.md  NEO4J_PATHWAYS_GUIDE.md  NEO4J_TYPE_MAPPINGS.md  PROFESSIONAL_HOMEWORK_REPORT.md  PUSH_INSTRUCTIONS.md  README.md  README_SOLUTION.md  REAL_WORLD_IMPLEMENTATION.md  RESULTS_ANALYSIS.md  SETUP_GUIDE.md  SOLUTION_DOCUMENTATION.md  (+125 more)
airbyte_dags_output/: .env.template  README.md  docker-compose.yml  email_batch_analytics_airbyte_config.yaml  email_classification_pipeline_airbyte_config.yaml  email_security_analysis_airbyte_config.yaml  realtime_email_analysis_airbyte_config.yaml  requirements.txt
airflow_dags/: email_classification_dag.py
app/: main.py
app/api/: ml_routes.py  (+2 more)
config/: sme_metrics_config.json
dags/: complete_mlops_pipeline.py  mlops_data_pipeline.py  mlops_neo4j_complete_pipeline.py  mlops_neo4j_simple.py  mlops_s3_pipeline.py.disabled  mlops_s3_simple.py  monitoring_maintenance_dag.py  s3_lab3_dag.py
data/: emails.json  expanded_training_emails.json  expanded_training_stats.json  graph_export.json  neo4j_loading_stats.json  topic_keywords.json  training_emails.json  training_emails_stats.json
docs/: ARCHIVE_MANIFEST.md  FINAL_HOMEWORK_STATUS_REPORT.md
final_verification/: FINAL_HOMEWORK_STATUS.md  complete_homework_verification_20250929_115107.json
frontend/: comprehensive_analysis_ui.html  comprehensive_mlops_ui.html  enhanced_airbyte_ui.html  enhanced_ui.html  graph_visualization.html  index.html  interactive_ui.html  realtime_training_dashboard.html
homework_tracking/: test_results.json  test_timeline.json  visualization.html
notebooks/: homework_data_investigation.py  pattern_analysis_explainable.py
screenshots/: README.md  capture_metadata.json
static/: index.html
test_results/: design_patterns_test_20250929_114636.json  (+5 more)
(+43 files in other folders)
